# harness-project-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.agent/prompts/: build.md  plan.md  review.md  spec.md
.agents/skills/: README.md
.agents/skills/code-review-and-quality/: SKILL.md
.agents/skills/git-workflow-and-versioning/: SKILL.md
.agents/skills/incremental-implementation/: SKILL.md
.agents/skills/planning-and-task-breakdown/: SKILL.md
.agents/skills/spec-driven-development/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.claude/: settings.json
.claude/commands/: build.md  plan.md  review.md  spec.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/references/: security-checklist.md  testing-patterns.md
docs/skills/: README.md  code-review-and-quality.md  git-workflow-and-versioning.md  incremental-implementation.md  planning-and-task-breakdown.md  spec-driven-development.md  test-driven-development.md
docs/workflows/: commit-conventions.md  pr-flow.md
scripts/: init-template.sh
src/di2vibe/: main.py
tests/: conftest.py
